clase 13 trabajando con figure y figcaption para las imagenes

--- a/EJERCICIO 2/index.html
+++ b/EJERCICIO 2/index.html
@@ -8,7 +8,13 @@
 <body>
     <main>
         <section>
-            <img src="./pics/tinified/small.jpg" alt="Es una imagen de un perrito">
+            <figure>
+                <img 
+                    src="./pics/tinified/small.jpg" 
+                    alt="Es una imagen de un perrito"
+                />
+                <figcaption>Es una imágen de un perrito</figcaption>  
+            </figure>
         </section>
     </main>
 </body>
