--- a/EJERCICIO 4/index.html
+++ b/EJERCICIO 4/index.html
@@ -6,6 +6,19 @@
     <title>Formularios</title>
 </head>
 <body>
-    
+    <form action="">
+        <label for="nombre">
+            <span>¿Cuál es tu nombre?</span>
+            <input type="text" id="nombre" placeholder="Tu nombre"/>
+        </label>
+        <label for="inicio-platzi">
+            <span>¿Qué día iniciaste en Platzi</span>
+            <input type="date" id="inicio-platzi" />
+        </label>
+        <label for="horario">
+            <span>¿En que horario estudias?</span>
+            <input type="time" id="horario" />
+        </label>
+    </form>
 </body>
 </html>
