Clase 18 autocomplete y require

--- a/EJERCICIO 3/index.html
+++ b/EJERCICIO 3/index.html
@@ -8,7 +8,9 @@
 <body>
     <main>
         <section>
-            <video src="./video.mp4#t=1,2" controls preload="auto"></video>
+            <video  controls preload="auto">
+            <source src="./video.mp4#t=1,2"/>
+            </video>
         </section>
     </main>
 </body>
