--- a/tarea1CSS/index.html
+++ b/tarea1CSS/index.html
@@ -15,7 +15,7 @@
                 <li>Zapallo</li>
                 <figure>
                     <img src="./images/zapallo.jpg" alt="">
-                    <!-- <figcaption>manzana</figcaption> -->
+                    <!-- <figcaption>manzana</figcaption> --> <!-- aca va el texto que va abajo de la imagen-->
                 </figure>
                 
                 <li>Choclo</li>
