--- a/tarea1CSS/index.html
+++ b/tarea1CSS/index.html
@@ -13,29 +13,44 @@
             <li>Verduras</li>
             <ol>
                 <li>Zapallo</li>
-                <figure>
+                <figure class="carne">
                     <img src="./images/zapallo.jpg" alt="">
                     <!-- <figcaption>manzana</figcaption> --> <!-- aca va el texto que va abajo de la imagen-->
                 </figure>
                 
                 <li>Choclo</li>
+                <figure class="verdura">
+                    <img src="./images/choclo.jpg" alt="">
+                </figure>
                 <li>papa</li>
+                <figure class="verdura">
+                    <img src="./images/papas.jpg" alt="">
+                </figure>
                 <li>cilantro</li>
+                <figure class="verdura">
+                    <img src="./images/cilantro.jpg" alt="">
+                </figure>
             </ol>
             <li>Carnes</li>
             <ol>
                 <li>Posta Negra</li>
+                <figure class="carne">
+                    <img src="./images/posta.jpg" alt="">
+                </figure>
             </ol>
         </ul>
         <h2>Receta para hacer una cazuela</h2>
-        <ol>
+        <ul>
             <li>Cortar y picar las verduras</li>
             <li>Limpiar la carne</li>
             <li>Colocar los ingredientes en una olla</li>
             <li>Hervir hasta que la papa quede blanda</li>
             <li>Agregar arroz, fideos cabellos de angel o sémola</li>
             <li>Servir y disfrutar!!</li>
-        </ol>    
+            <figure class="fuera">
+                <img src="./images/cazuela.jpg" alt="">
+            </figure>
+        </ul>    
     </main>
 </body>
 </html>
