--- a/clasePseudoclases/index.html
+++ b/clasePseudoclases/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="main-nav">
-                <li class="main-nav__item"><a href="">Home</a></li>
+                <li class="main-nav__item"><a href="">Home</a></li> <!--etiqueta llamada item parte main-nav-->
                 <li class="main-nav__item"><a href="">Cursos</a></li>
                 <li class="main-nav__item"><a href="">Instructores</a></li>
                 <li class="main-nav__item"><a href="">Blog</a></li>
