--- a/EJERCICIO 2/index.html
+++ b/EJERCICIO 2/index.html
@@ -7,13 +7,10 @@
 </head>
 <body>
     <main>
-        <section>
-            <figure>
-                <img 
-                    src="./pics/tinified/small.jpg" 
-                    alt="Es una imagen de un perrito"
-                />
-                <figcaption>Es una imágen de un perrito</figcaption>  
+        <section class="imagen">
+            <figure class="imagen">
+                <img src="./pics/tinified/small.jpg" alt="Es una imagen de un perrito" />
+                <figcaption>Es una imágen de un perrito (texto abajo de la imagen)</figcaption>  
             </figure>
         </section>
     </main>
