--- a/claseCalendario/index.html
+++ b/claseCalendario/index.html
@@ -9,12 +9,12 @@
    <main>
     <form action="">
         <label for="nombre">
-            <span>¿Cuál es tu nombre</span>
+            <span>¿Cuál es tu nombre?</span> <!--span es el texto de lo que queremos preguntar-->
             <input type="text" name="nombre" id="nombre" autocomplete="name" required>
         </label>
         <label for="correo">
             <span>¿Cuál es tu correo?</span>
-            <input type="email" name="correo" id="correo" autocomplete="email" required>
+            <input type="email" name="correo" id="correo" autocomplete="email" required> <!--tipo email permite exigir  que el texto ingresado contenga un @ y un .  -->
         </label>
         <label for="pais">
             <span>¿En qué país vives</span>
