--- a/claseCalendario/select.html
+++ b/claseCalendario/select.html
@@ -13,8 +13,11 @@
             <option value="CSS3">CSS3</option>
             <option value="Web Standards">Web Standards</option>
         </select> -->
+
+
+        <!--Esta es la mejor forma de generar un selector de opciones ya que permite mostrar las opciones e ir escribiendo para ir filtrando-->
         <input list="cursos">
-        <datalist id="cursos">
+        <datalist id="cursos"><!--esto hace la magia-->
             <option value="JavaScript"></option>
             <option value="HTML5"></option>
             <option value="CSS3"></option>
