--- a/claseForms/index.html
+++ b/claseForms/index.html
@@ -8,8 +8,8 @@
 <body>
     <form action="">
         <label for="nombre">
-            <span>¿Cuál es tu nombre?</span>
-            <input type="text" id="nombre" placeholder="Tu nombre"/>
+            <span>¿Cuál es tu nombre?</span><!-- el for del label debe ser el mismo del id-->
+            <input type="text" id="nombre" placeholder="Tu nombre"/> <!--placeholder es un texto de ejemplo que queda en el formulario-->
         </label>
         <label for="inicio-platzi">
             <span>¿Qué día iniciaste en Platzi</span>
