--- a/claseVideo/index.html
+++ b/claseVideo/index.html
@@ -10,6 +10,7 @@
         <section>
             <video  controls preload="auto">
             <source src="./video.mp4#t=1,2"/>
+            <source src="./video.m4v#t=1,2"/>
             </video>
         </section>
     </main>
