cambios realizados, ya en el video 41

--- a/desafioLayout/index.html
+++ b/desafioLayout/index.html
@@ -13,27 +13,37 @@
         </figure>
       <nav class="nav"></nav>
         <ul class="nav__list">
-            <li>Home</li>
-            <li>Cursos</li>
-            <li>Instructores</li>
-            <li>Blog</li>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Cursos</a>
+            </li>
+            <li>
+                <a href="#">Instructores</a>
+            </li>
+            <li>
+                <a href="#">Blog</a>
+            </li>
         </ul>
     </header>
     <main class="main">
         <aside class="routes">
-            <figure class="routes_images">
-                <img src="" alt="">
-
-
-
+            <figure class="routes__images">
+                <img src="./images/LOGO.png" alt="Route 1">
+                <img src="./images/LOGO.png" alt="Route 1">
+                <img src="./images/LOGO.png" alt="Route 1">
+                <img src="./images/LOGO.png" alt="Route 1">
             </figure>
-
-
-
         </aside>
-
-
-
+        <section class="content">
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem debitis nulla reprehenderit culpa architecto fuga deserunt quos repellat officia ut magni quibusdam earum, aliquam, vitae dicta blanditiis excepturi! Neque, dolorum.
+            </p>
+        </section>
     </main>
+    <footer class="footer">
+        <p>Acerca de nosotros</p>
+    </footer>
 </body>
-</html> 
+</html>
