--- a/desafioPosition/index.html
+++ b/desafioPosition/index.html
@@ -11,7 +11,9 @@
         <div class="contenido">
             <h1>Texto Ejemplo</h1>
         </div>
-        <p class="texto">Algo de texto de ejemplo para el ejercicio</p>
+        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, esse dignissimos? Natus voluptates at commodi? Sit tenetur aliquid placeat ducimus, vel labore dolores odio repellat ipsa numquam officiis, voluptatum ipsam.
+        Amet dolore tempora aspernatur sit obcaecati blanditiis repellat magnam quis, fuga dolorem asperiores eos, corrupti assumenda? Odit, delectus ad! Harum consectetur aliquid mollitia delectus rerum vel sed a odio! Quas.
+        Quaerat reprehenderit, consectetur in eveniet mollitia accusantium quasi nesciunt minima expedita perferendis magnam, magni possimus? Culpa quos, adipisci ex ducimus aliquid error, quaerat assumenda veritatis, et eius ad laudantium tenetur!</p>
     </div>
 </body>
 </html>
