--- a/claseEspecificidad/index.html
+++ b/claseEspecificidad/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <header class="page-header">
+    <header class="page-header"> <!--cabecera-->
         <h1 id="page-title" class="title">Empresa</h1>
-        <nav>
-            <ul id="main-nav" class="nav">
-                <li><a href="">Home</a></li>
+        <nav> <!--barra de navegacion-->
+            <ul id="main-nav" class="nav"> <!--lista desordenada-->
+                <li><a href="">Home</a></li> <!--item de la lista-->
                 <li><a href="">Cursos</a></li>
                 <li><a href="">Instructores</a></li>
                 <li><a href="" class="blog">Blog</a></li>
